# eular

./: eular.cabal
app/: Main.hs
src/: Problem.hs
test/: ProblemSpec.hs  Spec.hs
