name:                eular
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.20

library
  hs-source-dirs:      src
  exposed-modules:     Problem
  build-depends:       base
                     , classy-prelude
                     , bytestring
                     , text
  default-language:    Haskell2010

executable eular-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , eular
                     -----------
                     , hspec
                     , hspec-discover
  default-language:    Haskell2010

test-suite eular-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ProblemSpec
  build-depends:       base
                     , eular
                     , classy-prelude
                     , bytestring
                     , text
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
